--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "Blog app backend code ",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "NODE_ENV=production node server",
+    "dev": "nodemon server"
+   
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Yaadee/GO2CODE_FS_01.git"
   },
   "author": "Yadasa Tarafa",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Yaadee/GO2CODE_FS_01/issues"
   },
@@ -23,7 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
